fixed layout problem on topic pages, added some more color styling

--- a/client/sass/partials/_colors.scss
+++ b/client/sass/partials/_colors.scss
@@ -1,5 +1,4 @@
-$red: #f6431a;
-$red: #f36c3d;
+$red: #a03232;
 $green:#a3d06d;
 
 $blue:#7ac0e4;
